--- a/FrontGoodEnergy/styles/styles.css
+++ b/FrontGoodEnergy/styles/styles.css
@@ -211,7 +211,7 @@ tr:hover td { background: rgba(255, 255, 255, .03); }
   min-height: 100vh;
   display: grid; place-items: center;
   background-color: var(--bg);
-  background-image: url(/assets/ceu.png);
+  background-image: url(../assets/ceu.png);
   background-size: cover;
   background-position: center;
 }
@@ -258,7 +258,7 @@ tr:hover td { background: rgba(255, 255, 255, .03); }
 .zen-mode-overlay {
   position: fixed;
   top: 0; left: 0; width: 100%; height: 100%;
-  background: url('/assets/ceu.png') center/cover;
+  background: url('../assets/ceu.png') center/cover;
   z-index: 99;
   display: flex;
   flex-direction: column;
